Fix game list overflow

--- a/src/components/GameList/GameList.css
+++ b/src/components/GameList/GameList.css
@@ -8,6 +8,8 @@
   border-radius: 2em 1em 4em / 0.5em 3em;
   margin: 0;
   padding: 16px 8px;
+  display: grid;
+  grid-template-rows: max-content 1fr;
 }
 
 .game-list__header {
@@ -15,6 +17,7 @@
   grid-template-columns: 3fr 1fr 1fr;
   margin-bottom: 4px;
   border-bottom: 1px solid var(--black);
+  margin-right: 8px;
 }
 
 .game-list__header__creator {
@@ -26,4 +29,20 @@
   display: grid;
   justify-content: end;
   margin-right: 4px;
+}
+
+.game-list__games {
+  position: relative;
+  max-height: 100%;
+}
+
+.game-list__games__wrapper {
+  overflow: scroll;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  max-height: 100%;
+  padding-right: 8px;
 }
